# pydrology

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  pyproject.toml
.cargo/: config.toml
crates/pydrology-core/: Cargo.toml
crates/pydrology-core/src/: elevation.rs  forcing.rs  lib.rs  traits.rs
crates/pydrology-core/src/cemaneige/: constants.rs  coupled.rs  mod.rs  params.rs  processes.rs  run.rs  state.rs
crates/pydrology-core/src/gr2m/: constants.rs  fluxes.rs  mod.rs  params.rs  processes.rs  run.rs  state.rs
crates/pydrology-core/src/gr6j/: constants.rs  fluxes.rs  mod.rs  params.rs  processes.rs  run.rs  state.rs  unit_hydrographs.rs
crates/pydrology-core/src/hbv_light/: constants.rs  fluxes.rs  mod.rs  params.rs  processes.rs  routing.rs  run.rs  state.rs
crates/pydrology-macros/: Cargo.toml
crates/pydrology-macros/src/: lib.rs
crates/pydrology-macros/tests/: compile_tests.rs
crates/pydrology-macros/tests/fail/: non_f64_field.rs  non_f64_field.stderr
crates/pydrology-macros/tests/pass/: basic.rs  custom_name.rs
crates/pydrology-python/: Cargo.toml
crates/pydrology-python/src/: cemaneige.rs  convert.rs  gr2m.rs  gr6j.rs  hbv_light.rs  lib.rs  macros.rs  metrics.rs
docs/: ADDING_A_MODEL.md  ARCHITECTURE.md  CEMANEIGE.md  COMMON_MISTAKES.md  FORCING_DATA_CONTRACT.md  HBV_LIGHT.md  MODEL_CHECKLIST.md  MODEL_CONTRACT.md  USER_GUIDE.md
notebooks/: example-us.ipynb
python/pydrology/: __init__.py  _core.pyi  outputs.py  registry.py
python/pydrology/calibration/: calibrate.py  progress.py  types.py
python/pydrology/calibration/metrics/: __init__.py  functions.py  registry.py
python/pydrology/cemaneige/: constants.py  layers.py  processes.py  run.py  types.py
python/pydrology/models/: __init__.py  gr2m.py  gr6j.py  gr6j_cemaneige.py  hbv_light.py
python/pydrology/models/cemaneige/: __init__.py  outputs.py
python/pydrology/models/gr2m/: __init__.py  run.py
python/pydrology/models/gr6j/: __init__.py  run.py
python/pydrology/models/gr6j_cemaneige/: __init__.py  run.py
python/pydrology/models/hbv_light/: __init__.py  run.py
python/pydrology/processes/: __init__.py  constants.py  gr2m.py  gr6j.py  hbv_light.py  unit_hydrographs.py
python/pydrology/utils/: __init__.py  dem.py  elevation.py  precipitation.py
scratchpad/: AIRGR_MODEL_DEFINITION.md  BENCHMARK_RESULTS.md  PYDROLOGY_DESIGN.md  RUST_PERFORMANCE_ANALYSIS.md
scratchpad/HBV/: MODEL_DEFINITION.md
src/: lib.rs  main.rs  metrics.rs
src/cemaneige/: coupled.rs  run.rs
src/gr2m/: mod.rs  outputs.rs  params.rs  run.rs
src/gr6j/: __init__.py  inputs.py  mod.rs  outputs.py  outputs.rs  params.rs  run.rs
src/gr6j/calibration/: __init__.py  calibrate.py  types.py
src/gr6j/calibration/metrics/: functions.py  registry.py
src/gr6j/cemaneige/: __init__.py  constants.py  layers.py  types.py
src/gr6j/model/: run.py  types.py
src/gr6j/utils/: __init__.py  dem.py  precipitation.py
src/hbv_light/: mod.rs  outputs.rs  params.rs  routing.rs  run.rs
src/pydrology/: __init__.py  registry.py  types.py
src/pydrology/calibration/metrics/: functions.py
src/pydrology/models/gr6j/: __init__.py  constants.py  run.py
src/pydrology/models/gr6j_cemaneige/: __init__.py  constants.py  run.py
src/pydrology/models/hbv_light/: __init__.py  constants.py  outputs.py  processes.py  routing.py  run.py  types.py
src/pyo3_bindings/: cemaneige.rs  gr2m.rs  gr6j.rs  hbv_light.rs  metrics.rs  mod.rs
tests/: test_inputs.py  test_model_conformance.py  test_outputs.py  test_registry.py
tests/calibration/: __init__.py  test_calibrate.py  test_functions.py  test_progress.py  test_registry.py  test_types.py
tests/cemaneige/: test_layers.py  test_run.py  test_rust_equivalence.py  test_types.py
tests/model/: test_run.py  test_types.py
tests/models/: test_array_contiguity.py
tests/models/gr2m/: test_numba.py  test_run.py  test_rust_equivalence.py  test_types.py
tests/models/gr6j/: test_run.py  test_rust_equivalence.py  test_types.py
tests/models/gr6j_cemaneige/: test_run.py  test_types.py
tests/models/hbv_light/: __init__.py  test_integration.py  test_run.py  test_rust_equivalence.py  test_types.py
tests/processes/: test_cemaneige.py  test_gr2m.py  test_gr6j.py  test_hbv_light.py  test_unit_hydrographs.py
tests/utils/: test_dem.py  test_elevation.py  test_precipitation.py
