[package]
name = "pydrology"
version = "0.1.0"
edition = "2024"

[lib]
name = "pydrology"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"], optional = true }
numpy = { version = "0.23", optional = true }

[dev-dependencies]
approx = "0.5"

[features]
default = []
python = ["pyo3", "numpy"]

[[bin]]
name = "pydrology-demo"
path = "src/main.rs"

[[bin]]
name = "bench"
path = "src/bin/bench.rs"
