[project]
name = "pydrology"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ctrl-freak",
    "geopandas>=1.1.2",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "polars>=1.37.1",
    "pyarrow>=23.0.0",
    "pydantic>=2.0",
    "rasterio>=1.5.0",
    "seaborn>=0.13.2",
    "tqdm>=4.66",
]


[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[tool.maturin]
python-source = "python"
module-name = "pydrology._core"
manifest-path = "crates/pydrology-python/Cargo.toml"

[dependency-groups]
dev = [
    "deap>=1.4.3",
    "maturin>=1.7",
    "pymoo>=0.6.1.6",
    "pyright>=1.1.408",
    "pytest>=8.3",       # tests
    "pytest-cov>=6.2.1",
    "ruff>=0.12",        # linter + formatter
]

# -----------------------
# Ruff (lint + format)
# -----------------------
[tool.ruff]
line-length = 120
target-version = "py312"
extend-exclude = ["experiments/"]

[tool.ruff.lint]
# Errors, warnings, naming, imports, modern py, bugbear, comprehensions, simplify
select = ["E", "F", "W", "N", "I", "UP", "B", "C4", "SIM"]
ignore = [
    "E501", # let formatter handle wrapping
    "N803", # allow X, Y for ML-style params
    "N806", # allow X, Y for local vars
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# -----------------------
# ty (fast static type checker)
# -----------------------
[tool.ty]
[tool.ty.rules]
possibly-unresolved-reference = "warn"

# -----------------------
# Pytest
# -----------------------
[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--ignore=notebooks/",
    "--ignore=experiments/",
]

[tool.uv]
prerelease = "if-necessary"

[tool.uv.sources]
# transfer-learning-publication = { git = "https://github.com/CooperBigFoot/transfer-learning-publication.git", rev = "main" }
ctrl-freak = { git = "https://github.com/hydrosolutions/ctrl-freak.git", rev = "main" }
